--- a/views/planHome.ejs
+++ b/views/planHome.ejs
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <title>PBSC: Planejamento</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
