Importação dos modelos de atividades, iniciativas e objetivos para o nov layout

--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PBSC: Planejamento</title>
+        <title>PBSC: Atividades</title>
         <%- include('meta'); %>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
@@ -18,7 +18,7 @@
 
         <header class="container mb-0">
             <hr>
-            <h1>Planejamento (Início)</h1>
+            <h1>Planejamento</h1>
         </header>
 
         <main class="container">
