--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -56,9 +56,9 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item disabled" href="#">Objetivos</a>
-                <a class="dropdown-item disabled" href="#">Iniciativas</a>
-                <a class="dropdown-item disabled" href="#">Atividades</a>
+                <a class="dropdown-item" href="/obj/">Objetivos</a>
+                <a class="dropdown-item" href="/ini/">Iniciativas</a>
+                <a class="dropdown-item" href="/ativ">Atividades</a>
             </div>
         </div>
         <div class="btn-group mr-2 mb-2 mt-2">
