--- a/views/alimHome.ejs
+++ b/views/alimHome.ejs
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <title>PBSC: Alimentação</title>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="shortcut icon" href="../img/ico_wh2x2.png">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <%- include('meta'); %>
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
-        <link rel="stylesheet" type="text/css" href="../styles/hr.css">
     </head>
     <body>
         <%- include('nav'); %>
