--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PBSC: Planejamento</title>
+        <title>PBSC: Iniciativas</title>
         <%- include('meta'); %>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="../src/todasAtividades.js" type="text/javascript"></script>
+        //<script src="../src/todasIniciativas.js" type="text/javascript"></script>
 
         
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
@@ -18,15 +18,15 @@
 
         <header class="container mb-0">
             <hr>
-            <h1>Planejamento (Início)</h1>
+            <h1>Planejamento</h1>
         </header>
 
         <main class="container">
-            <h2>Lista de Atividades</h2>
+            <h2>Lista de Iniciativas</h2>
 
             <section>
             
-                <div class="row" id="Ativ">
+                <div class="row" id="Ini">
 
                 </div>
             
