finalmente consegui criar a sessão e atribuir apenas os dadospara aparecer apenas para o dono - MUITO ORGULHOSO DE VOCÊ BRUNO!

--- a/views/planHome.ejs
+++ b/views/planHome.ejs
@@ -18,17 +18,17 @@
 
         <header class="container mb-0">
             <hr>
-            <h1>Planejamento (Início)</h1>
+            <h1>Planejamento</h1>
         </header>
 
         <main class="container">
-            <h2>Lista de Atividades</h2>
+            <h2>Dashboard</h2>
 
             <section>
             
-                <div class="row" id="Ativ">
-
-                </div>
+                <main class="container">
+                    <%- include('dashboard'); %>
+                </main>
             
             </section>
             
