--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -8,6 +8,9 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="../src/todasAtividades.js" type="text/javascript"></script>
+        <script src="../src/botao_excluir.js" type="text/javascript"></script>
+        <script src="../src/botao_concluir.js" type="text/javascript"></script>
+        <script src="../src/botao_andamento.js" type="text/javascript"></script>
 
         
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
