--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -37,9 +37,9 @@
                     </p>
                 </div>
                 <a class="dropdown-item" href="/plan/">Planejamento</a>
-                <a class="dropdown-item" href="/alim/">Alimentação</a>
-                <a class="dropdown-item" href="/run/">Corrida</a>
-                <a class="dropdown-item" href="/gym/">Musculação</a>
+                <a class="dropdown-item disabled" href="/alim/">Alimentação</a>
+                <a class="dropdown-item disabled" href="/run/">Corrida</a>
+                <a class="dropdown-item disabled" href="/gym/">Musculação</a>
                 <a class="dropdown-item disabled" href="#">Sobre</a>
                 <a class="dropdown-item" href="/auth/logout">Sair</a>
             </div>
@@ -80,4 +80,5 @@
         </div> 
     </div>
 </nav>
+
 
