--- a/views/meta.ejs
+++ b/views/meta.ejs
@@ -8,8 +8,8 @@
 
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 <link rel="stylesheet" type="text/css" href="../styles/hr.css">
+<link rel="stylesheet" type="text/css" href="../styles/main.css">
+<link rel="stylesheet" type="text/css" href="../styles/login.css">
