--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -46,7 +46,7 @@
         </div>
         <div class="btn-group mr-2 mb-2 mt-2">
             <button type="button" class="btn btn-dark">
-                <i class="material-icons align-middle">&#xe8a0;&nbsp;</i>
+                <i class="fas align-middle">&#xf06e;&nbsp;</i>
                 <p class="align-middle d-inline">Ver</p>
             </button>
             <button class="btn btn-dark dropdown-toggle dropdown-toggle-split"
@@ -56,14 +56,14 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="/obj/">Objetivos</a>
-                <a class="dropdown-item" href="/ini/">Iniciativas</a>
                 <a class="dropdown-item" href="/ativ">Atividades</a>
+                <a class="dropdown-item" href="/ini/">Iniciativas</a>
+                <a class="dropdown-item" href="/obj/">Objetivos</a> 
             </div>
         </div>
         <div class="btn-group mr-2 mb-2 mt-2">
             <button type="button" class="btn btn-dark">
-                <i class='material-icons align-middle'>&#xe150;&nbsp;</i>
+                <i class='fas align-middle'>&#xf6e8;&nbsp;</i>
                 <p class="align-middle d-inline">Criar</p>
             </button>
             <button class="btn btn-dark dropdown-toggle dropdown-toggle-split"
@@ -73,9 +73,9 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item disabled" href="#">Objetivos</a>
+                <a class="dropdown-item" href="/ativ/nova">Atividades</a>
                 <a class="dropdown-item disabled" href="#">Iniciativas</a>
-                <a class="dropdown-item disabled" href="#">Atividades</a>
+                <a class="dropdown-item disabled" href="#">Objetivos</a>
             </div>
         </div> 
     </div>
