--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
             <h1>Bem Vindo <%= user.username %>!</h1>
         </header>
         <main class="container">
-            <%- include('dashboard'); %>
+            <a href="/ativ">Ir para atividades</a>
         </main>
     
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
