ajustes nos formulário

--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -74,8 +74,8 @@
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="/ativ/nova">Atividades</a>
-                <a class="dropdown-item disabled" href="#">Iniciativas</a>
-                <a class="dropdown-item disabled" href="#">Objetivos</a>
+                <a class="dropdown-item" href="/ini/nova">Iniciativas</a>
+                <a class="dropdown-item" href="/obj/nova">Objetivos</a>
             </div>
         </div> 
     </div>
