--- a/views/novoObjetivo.ejs
+++ b/views/novoObjetivo.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PBSC: Nova Atividade</title>
+        <title>PBSC: Novo Objetivo</title>
         <%- include('meta'); %>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-        <script src="../src/gravarNovaAtividade.js" type="text/javascript"></script>
+        <script src="../src/gravarNovoObjetivo.js" type="text/javascript"></script>
 
     </head>
     <body>
@@ -21,16 +21,16 @@
         </header>
 
         <main class="container">
-            <h2>Nova Atividade</h2>
+            <h2>Novo Objetivo</h2>
 
             <section>
-                <form id="form_ativ">
+                <form>
                     <div class="row py-2 align-items-center">
                         <div class="col-1 bg-white font-weight-bold text-right">Título</div>
                         <div class="col-sm">
                             <input 
                                 type="text" 
-                                id="ativNome" 
+                                id="objNome" 
                                 placeholder="Preencher com um nome de referência rápida"
                                 required
                                 style="width: 100%;height: 5vh;"
@@ -40,41 +40,35 @@
                     <div class="row py-2 align-items-center">
                         <div class="col-1 bg-white font-weight-bold text-right">Status</div>
                         <div class="col-sm col-lg-2">
-                            <select id="ativStat" required style="width: 150px; height: 5vh;"></select>
-                        </div> 
-                    </div>
-                    <div class="row py-2 align-items-center">
-                        <div class="col-1 bg-white font-weight-bold text-right">Iniciativa Associada</div>
-                        <div class="col-sm col-lg-2">
-                            <select id="ativIni" required style="width: 150px; height: 5vh;"></select>
+                            <select id="objStat" required style="width: 150px; height: 5vh;"></select>
                         </div> 
                     </div>
                     <div class="row">
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Descrição</div>
                             <div>
-                                <textarea id="ativDesc" style="width: 100%; height: 15vh;"></textarea>
+                                <textarea id="objDesc" style="width: 100%; height: 15vh;"></textarea>
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Riscos</div>
-                            <textarea id="ativRisk" style="width: 100%; height: 15vh;"></textarea> 
+                            <textarea id="objRisk" style="width: 100%; height: 15vh;"></textarea> 
                         </div>
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Motivação</div>
-                            <textarea id="ativMot" style="width: 100%; height: 15vh;"></textarea>
+                            <textarea id="objMot" style="width: 100%; height: 15vh;"></textarea>
                         </div>
                     </div>
                     <div class="row align-items-end">
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Criação</div>
                             <div>
-                                <input type="datetime-local" id="ativDataCria" style="width: 100%;">
+                                <input type="datetime-local" id="objDataCria" style="width: 100%;">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Prazo</div>
-                            <input type="datetime-local" id="ativDataFim" style="width: 100%;"> 
+                            <input type="datetime-local" id="objDataFim" style="width: 100%;"> 
                         </div>
                         <div class="col-sm">
                             <button 
@@ -95,14 +89,11 @@
                     
                 </form>
             </section>
-            
         </main>
-        
     </body>
     
-    <script src="../src/statusAtividade.js"></script>
-    <script src="../src/listaIniciativas.js"></script>
-    <script src="../src/dataAtividade.js"></script>
+    <script src="../src/statusObjetivo.js"></script>
+    <script src="../src/dataObjetivo.js"></script>
     
 </html>
 
