terminar correções do sistema de toggle dos cards

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-brand-centered navbar-expand-sm navbar-light bg-white container">
+<nav class="navbar navbar-brand-centered navbar-expand-sm navbar-light bg-white container" id="navbar">
     <div class="d-block-sm">
         <div>
             <a class="navbar-brand" href="/profile">
@@ -40,10 +40,10 @@
                 <a class="dropdown-item" href="/alim/">Alimentação</a>
                 <a class="dropdown-item" href="/run/">Corrida</a>
                 <a class="dropdown-item" href="/gym/">Musculação</a>
-                <a class="dropdown-item disabled" href="#">Sobre</a>
+                <a class="dropdown-item disabled" href="#!">Sobre</a>
                 <a class="dropdown-item" href="/auth/logout">Sair</a>
             </div>
         </div>
     </div>
+    <hr>
 </nav>
-
