--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
                             </a>
                         </li>
                         <li class="list-group-item list-group-item-action">
-                            <a href="#" onclick="alert('Login via Facebook desabilitado temporariamente')" class="text-dark text-decoration-none ico">
+                            <a href="#!" onclick="alert('Login via Facebook desabilitado temporariamente')" class="text-dark text-decoration-none ico">
                                 <i class='fab fa-facebook align-middle' style="font-size: 32px"></i>
                                 <br>
                                 Facebook
