--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-brand-centered navbar-expand-sm navbar-light bg-white container">
+<nav class="navbar navbar-brand-centered navbar-expand-sm navbar-light bg-white container" id="navbar">
     <div class="d-block-sm">
         <div>
             <a class="navbar-brand" href="/profile">
@@ -40,7 +40,7 @@
                 <a class="dropdown-item disabled" href="/alim/">Alimentação</a>
                 <a class="dropdown-item disabled" href="/run/">Corrida</a>
                 <a class="dropdown-item disabled" href="/gym/">Musculação</a>
-                <a class="dropdown-item disabled" href="#">Sobre</a>
+                <a class="dropdown-item disabled" href="#!">Sobre</a>
                 <a class="dropdown-item" href="/auth/logout">Sair</a>
             </div>
         </div>
@@ -79,6 +79,8 @@
             </div>
         </div> 
     </div>
+    <hr>
 </nav>
+
 
 
