--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -8,25 +8,26 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="../src/todasAtividades.js" type="text/javascript"></script>
+        
         <script src="../src/botao_excluir.js" type="text/javascript"></script>
         <script src="../src/botao_concluir.js" type="text/javascript"></script>
         <script src="../src/botao_andamento.js" type="text/javascript"></script>
+        <script src="../src/botao_editar.js" type="text/javascript"></script>
 
     </head>
     <body>
         <%- include('navPlan'); %>        
 
-        <header class="container mb-0">
-            <h1>Planejamento</h1>
-            <hr>
+        <header class="mb-0 gruda1 bg-white" >
+            <h1 class="ml-3 mt-1">Planejamento</h1>
+            <hr class="mx-3">
         </header>
-
+        
         <main class="container">
-            <h2>Lista de Atividades</h2>
 
-            <section>
-            
-                <div class="row" id="Ativ">
+            <section class="bg-white">
+                <h2>Lista de Atividades</h2>
+                <div class="row gruda3" id="Ativ">
 
                 </div>
             
