--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -16,23 +16,14 @@
 
     </head>
     <body>
-        <%- include('navPlan'); %>        
-
-        <header class="mb-0 gruda1 bg-white" >
-            <h1 class="ml-3 mt-1">Planejamento</h1>
-            <hr class="mx-3">
-        </header>
-        
-        <main class="container">
-
-            <section class="bg-white">
-                <h2>Lista de Atividades</h2>
-                <div class="row gruda3" id="Ativ">
-
-                </div>
+        <%- include('navPlan'); %>
             
-            </section>
-            
+        <br><br><br>
+        <main class="container-fluid">
+
+            <div class="row" id="Ativ">
+
+            </div>
         </main>
         
     </body>
