--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -17,16 +17,9 @@
     </head>
     <body>
         <%- include('navPlan'); %>
-        
 
-        <header class="container mb-0">
-            <hr>
-            <h1>Planejamento</h1>
-        </header>
-
-        <main class="container">
-            <h2>Lista de Iniciativas</h2>
-
+        <main class="container-fluid mt-5">
+            <br>
             <section>
             
                 <div class="row" id="Ini">
