--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -1,29 +1,31 @@
-<nav class="navbar navbar-brand-centered navbar-expand-sm navbar-light bg-white fixed-top" id="navbar">
-    <div class="d-block-sm">
-        <div class="navbar-brand">
-            <a href="/profile">
-                <img src="../img/ico_wh.png" width="75px" class="navlogo">
-            </a>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bgBLK fixed-top text-white" id="navbar">    
+    <div class="navbar-brand order-fisrt">
+        <a href="/profile">
+            <img src="../img/ico_bk.png" width="75px" class="navlogo">
+        </a>
     </div>
     
     <button 
-        class="navbar-toggler order-first" 
+        class="navbar-toggler navbar-dark order-first bgBLK text-white mr-2" 
         type="button" data-toggle="collapse" 
         data-target="#navbarSupportedContent" 
         aria-controls="navbarSupportedContent" 
         aria-expanded="false" 
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon text-white"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="navbar-text text-white mr-5">
+        <span class="ml-0 mt-1 h3"><b>Planejamento</b>: Lista de Atividades</span>
+    </div>
+
+    <div class="collapse navbar-collapse " id="navbarSupportedContent">
         <div class="btn-group mr-2 mb-2 mt-2">
-            <button type="button" class="btn btn-dark">
+            <button type="button" class="btn bgBLK text-white">
                 <i class='fas align-middle'>&#xf013;&nbsp;</i>
                 <p class="align-middle d-inline">Opções</p>
             </button>
-            <button class="btn btn-dark dropdown-toggle dropdown-toggle-split"
+            <button class="btn bgBLK text-white dropdown-toggle dropdown-toggle-split"
                 type="button" id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
@@ -45,11 +47,11 @@
             </div>
         </div>
         <div class="btn-group mr-2 mb-2 mt-2">
-            <button type="button" class="btn btn-dark">
+            <button type="button" class="btn bgBLK text-white">
                 <i class="fas align-middle">&#xf06e;&nbsp;</i>
                 <p class="align-middle d-inline">Ver</p>
             </button>
-            <button class="btn btn-dark dropdown-toggle dropdown-toggle-split"
+            <button class="btn bgBLK text-white dropdown-toggle dropdown-toggle-split"
                 type="button" id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
@@ -62,11 +64,11 @@
             </div>
         </div>
         <div class="btn-group mr-2 mb-2 mt-2">
-            <button type="button" class="btn btn-dark">
+            <button type="button" class="btn bgBLK text-white">
                 <i class='fas align-middle'>&#xf6e8;&nbsp;</i>
                 <p class="align-middle d-inline">Criar</p>
             </button>
-            <button class="btn btn-dark dropdown-toggle dropdown-toggle-split"
+            <button class="btn bgBLK text-white dropdown-toggle dropdown-toggle-split"
                 type="button" id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
@@ -79,4 +81,6 @@
             </div>
         </div> 
     </div>
+    
 </nav>
+
