--- a/views/novaIniciativa.ejs
+++ b/views/novaIniciativa.ejs
@@ -13,16 +13,9 @@
     </head>
     <body>
         <%- include('navPlan'); %>
-        
 
-        <header class="container mb-0">
-            <hr>
-            <h1>Planejamento</h1>
-        </header>
-
-        <main class="container">
-            <h2>Nova Iniciativa</h2>
-
+        <main class="container mt-5 ">
+            <br><br>
             <section>
                 <form>
                     <div class="row py-2 align-items-center">
