--- a/views/objetivos.ejs
+++ b/views/objetivos.ejs
@@ -18,13 +18,8 @@
     <body>
         <%- include('navPlan'); %>
 
-        <header class="container mb-0">
-            <hr>
-            <h1>Planejamento</h1>
-        </header>
-
-        <main class="container">
-            <h2>Lista de Objetivos</h2>
+        <main class="container-fluid mt-5">
+            <br><br>
 
             <section>
             
