--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-brand-centered navbar-expand-sm navbar-light bg-white fixed-top" id="navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top" id="navbar">
     <div class="d-block-sm">
         <div class="navbar-brand">
             <a href="/profile">
@@ -18,7 +18,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="btn-group mr-2 mb-2 mt-2">
+        <div class="btn-group dropright mr-2 mb-2 mt-2">
             <button type="button" class="btn btn-dark">
                 <i class='fas align-middle'>&#xf013;&nbsp;</i>
                 <p class="align-middle d-inline">Opções</p>
@@ -45,4 +45,7 @@
             </div>
         </div>
     </div>
+    
 </nav>
+<br>
+TCHAU
