--- a/views/novoObjetivo.ejs
+++ b/views/novoObjetivo.ejs
@@ -13,15 +13,9 @@
     </head>
     <body>
         <%- include('navPlan'); %>
-        
 
-        <header class="container mb-0">
-            <hr>
-            <h1>Planejamento</h1>
-        </header>
-
-        <main class="container">
-            <h2>Novo Objetivo</h2>
+        <main class="container mt-5">
+            <br><br>
 
             <section>
                 <form>
