--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -17,9 +17,10 @@
     </head>
     <body>
         <%- include('navPlan'); %>
-            
-        <br><br><br>
-        <main class="container-fluid">
+        
+        <main class="container mt-5">
+
+            <br><br><br>
 
             <div class="row" id="Ativ">
 
