--- a/views/novaIniciativa.ejs
+++ b/views/novaIniciativa.ejs
@@ -15,7 +15,7 @@
         <%- include('navPlan'); %>
 
         <main class="container mt-5 ">
-            <br><br>
+            <br><br><br>
             <section>
                 <form>
                     <div class="row py-2 align-items-center">
@@ -31,15 +31,15 @@
                         </div> 
                     </div>
                     <div class="row py-2 align-items-center">
-                        <div class="col-1 bg-white font-weight-bold text-right">Status</div>
-                        <div class="col-sm col-lg-2">
+                        <div class="col-2 bg-white font-weight-bold text-right">Status</div>
+                        <div class="col-sm col-lg">
                             <select id="iniStat" required style="width: 150px; height: 5vh;"></select>
                         </div> 
                     </div>
                     <div class="row py-2 align-items-center">
-                        <div class="col-1 bg-white font-weight-bold text-right">Objetivo</div>
-                        <div class="col-sm col-lg-2">
-                            <select id="iniObj" required style="width: 150px; height: 5vh;"></select>
+                        <div class="col-2 bg-white font-weight-bold text-right">Objetivo Associado</div>
+                        <div class="col-sm col-lg">
+                            <select id="iniObj" required style="width: 75%; height: 5vh;"></select>
                         </div> 
                     </div>
                     <div class="row">
