--- a/views/objetivos.ejs
+++ b/views/objetivos.ejs
@@ -18,8 +18,9 @@
     <body>
         <%- include('navPlan'); %>
 
-        <main class="container-fluid mt-5">
-            <br><br>
+        <main class="container mt-5">
+
+            <br><br><br>
 
             <section>
             
