--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,51 +1,94 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top" id="navbar">
-    <div class="d-block-sm">
-        <div class="navbar-brand">
+<nav class="navbar navbar-expand-lg navbar-light bgBLK fixed-top text-white container-fluid" id="navbar">    
+    <div class="container">
+        <div class="navbar-brand order-fisrt">
             <a href="/profile">
-                <img src="../img/ico_wh.png" width="75px" class="navlogo">
+                <img src="../img/ico_bk.png" width="75px" class="navlogo">
             </a>
         </div>
-    </div>
-    
-    <button 
-        class="navbar-toggler order-first" 
-        type="button" data-toggle="collapse" 
-        data-target="#navbarSupportedContent" 
-        aria-controls="navbarSupportedContent" 
-        aria-expanded="false" 
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        
+        <button 
+            class="navbar-toggler navbar-dark order-first bgBLK text-white mr-2" 
+            type="button" data-toggle="collapse" 
+            data-target="#navbarSupportedContent" 
+            aria-controls="navbarSupportedContent" 
+            aria-expanded="false" 
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon text-white"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="btn-group dropright mr-2 mb-2 mt-2">
-            <button type="button" class="btn btn-dark">
-                <i class='fas align-middle'>&#xf013;&nbsp;</i>
-                <p class="align-middle d-inline">Opções</p>
-            </button>
-            <button class="btn btn-dark dropdown-toggle dropdown-toggle-split"
-                type="button" id="dropdownMenuButton"
-                data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
-                <span class="sr-only">Toggle Dropdown</span>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <div class="dropdown-header">
-                    <p class="font-weight-bold">
-                        <img src="<%=user.thumbnail%>" width="50px" height="50px" class="rounded-circle nav-item">
-                        <%=user.username%>
+    
+        <div class="collapse navbar-collapse order-last" id="navbarSupportedContent">
+            <div class="btn-group mr-2 mb-2 mt-2">
+                <button type="button" class="btn bgBLK text-white">
+                    <p class="align-middle d-inline">
+                        <span class='fas align-middle navico'>&#xf013;</span>
+                        <br>
+                        <b>Opções</b>
                     </p>
+                </button>
+                <button class="btn bgBLK text-white dropdown-toggle dropdown-toggle-split"
+                    type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-header">
+                        <p class="font-weight-bold">
+                            <img src="<%=user.thumbnail%>" width="50px" height="50px" class="rounded-circle nav-item">
+                            <%=user.username%>
+                        </p>
+                    </div>
+                    <a class="dropdown-item" href="/profile/">Planejamento</a>
+                    <a class="dropdown-item disabled" href="/alim/">Alimentação</a>
+                    <a class="dropdown-item disabled" href="/run/">Corrida</a>
+                    <a class="dropdown-item disabled" href="/gym/">Musculação</a>
+                    <a class="dropdown-item disabled" href="#!">Sobre</a>
+                    <a class="dropdown-item" href="/auth/logout">Sair</a>
                 </div>
-                <a class="dropdown-item" href="/plan/">Planejamento</a>
-                <a class="dropdown-item disabled" href="/alim/">Alimentação</a>
-                <a class="dropdown-item disabled" href="/run/">Corrida</a>
-                <a class="dropdown-item disabled" href="/gym/">Musculação</a>
-                <a class="dropdown-item disabled" href="#!">Sobre</a>
-                <a class="dropdown-item" href="/auth/logout">Sair</a>
             </div>
+            <div class="btn-group mr-2 mb-2 mt-2">
+                <button type="button" class="btn bgBLK text-white">
+                    <p class="align-middle d-inline">
+                        <span class='fas align-middle navico'>&#xf06e;</span>
+                        <br>
+                        <b>Ver</b>
+                    </p>
+                </button>
+                <button class="btn bgBLK text-white dropdown-toggle dropdown-toggle-split"
+                    type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="/ativ">Atividades</a>
+                    <a class="dropdown-item" href="/ini/">Iniciativas</a>
+                    <a class="dropdown-item" href="/obj/">Objetivos</a> 
+                </div>
+            </div>
+            <div class="btn-group mr-2 mb-2 mt-2">
+                <button type="button" class="btn bgBLK text-white text-center">
+                    <p class="align-middle d-inline">
+                        <i class='fas align-middle navico'>&#xf6e8;</i>
+                        <br>
+                        <b>Criar</b>
+                    </p>
+                </button>
+                <button class="btn bgBLK text-white dropdown-toggle dropdown-toggle-split"
+                    type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="/ativ/nova">Atividades</a>
+                    <a class="dropdown-item" href="/ini/nova">Iniciativas</a>
+                    <a class="dropdown-item" href="/obj/nova">Objetivos</a>
+                </div>
+            </div> 
         </div>
     </div>
     
 </nav>
-<br>
-TCHAU
+
