--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,45 +11,84 @@
         <link rel="stylesheet" type="text/css" href="../styles/hr.css">
     </head>
     <body>
+        <%- include('nav'); %>
         
-
+        <br><br><br>
         <header class="container mt-5">
-            <%- include('nav'); %>
-            
             <h1>Olá <%= user.username %></h1>
             <hr>
-            <h2>Escolha uma das opcções</h2>
+            <h2>Escolha uma das opções</h2>
         </header>
         <main class="container">
            
-            <section class="">
-                <ul class="list-group list-group-flush active">
-                    <li class="list-group-item bg-dark text-white"><strong>PLANEJAMENTO</strong></li>
-                    <li class="list-group-item list-group-item-action">
-                        <a href="/ativ" class="link">Ver Atividades</a>
-                    </li>
-                    <li class="list-group-item list-group-item-action">
-                        <a href="/ini" class="link">Ver Iniciativas</a>
-                    </li>
-                    <li class="list-group-item list-group-item-action">
-                        <a href="/ativ" class="link">Ver Objetivos</a>
-                    </li>
-                </ul>     
-                <ul class="list-group">
-                    <li class="list-group-item bgBLK">
-                        <a href="#!" class="text-white link">
-                            Sobre o P_BSC
+            <div class="grid mx-3">
+                <div class="row">
+                    <div class="col bg-dark text-white h5 p-2 rounded">Planejamento</div>
+                </div>
+                <div class="row text-center">
+                    <div class="col">
+                        <img src="../img/project-management-vector-free-icons-set--12.png" style="width: 50%;" class="my-2">
+                        <br>
+                        CRIAR
+                    </div>
+                    <div class="col">
+                        <a href="/ativ" class="link">
+                            <img src="../img/startup-vector-free-icon-set-25.png" style="width: 50%;" class="my-2">
+                            <br>
+                            Criar Atividades
+                        </a>                
+                    </div>
+                    <div class="col">
+                        <a href="/ativ" class="link">
+                            <img src="../img/project-management-vector-free-icons-set--22.png" style="width: 50%;" class="my-2">
+                            <br>
+                            Criar Iniciativas
                         </a>
-                    </li>
-                </ul>            
-            </section>
+                    </div>
+                    <div class="col">
+                        <a href="/ativ" class="link"> 
+                            <img src="../img/project-management-vector-free-icons-set--31.png" style="width: 50%;" class="my-2">
+                            <br>
+                            Criar Objetivos
+                        </a>
+                    </div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col">
+                        <img src="../img/strategy-vector-free-icons-set-14.png" style="width: 50%;" class="my-2">
+                        <br>
+                        VER
+                    </div>
+                    <div class="col">
+                        <a href="/ativ" class="link">
+                            <img src="../img/business-vector-free-icon-set-39.png" style="width: 50%;" class="my-2">
+                            <br>
+                            Ver Atividades
+                        </a>                
+                    </div>
+                    <div class="col">
+                        <a href="/ativ" class="link">
+                            <img src="../img/strategy-vector-free-icons-set-21.png" style="width: 50%;" class="my-2">
+                            <br>
+                            Ver Iniciativas
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="/ativ" class="link">
+                            <img src="../img/startup-vector-free-icon-set-30.png" style="width: 50%;" class="my-2">
+                            <br>
+                            Ver Objetivos
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+
+            <br>
             
         </main>
 
-        <br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br>
-    
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
