ajustes no layout da navbar

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,7 +13,7 @@
     <body>
         <%- include('nav'); %>
         
-        <br><br><br>
+        <br><br>
         <header class="container mt-5">
             <h1>Olá <%= user.username %></h1>
             <hr>
@@ -26,59 +26,49 @@
                     <div class="col bg-dark text-white h5 p-2 rounded">Planejamento</div>
                 </div>
                 <div class="row text-center">
-                    <div class="col">
-                        <img src="../img/project-management-vector-free-icons-set--12.png" style="width: 50%;" class="my-2">
-                        <br>
-                        CRIAR
-                    </div>
-                    <div class="col">
+                    <div class="col-4">
                         <a href="/ativ" class="link">
-                            <img src="../img/startup-vector-free-icon-set-25.png" style="width: 50%;" class="my-2">
+                            <img src="../img/startup-vector-free-icon-set-25.png" style="width: 9vw;" class="my-2">
                             <br>
-                            Criar Atividades
+                            <span class="legico">Criar Atividades</span>
                         </a>                
                     </div>
-                    <div class="col">
+                    <div class="col-4">
                         <a href="/ativ" class="link">
-                            <img src="../img/project-management-vector-free-icons-set--22.png" style="width: 50%;" class="my-2">
+                            <img src="../img/project-management-vector-free-icons-set--22.png" style="width: 9vw;" class="my-2">
                             <br>
-                            Criar Iniciativas
+                            <span class="legico">Criar Iniciativas</span>
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col-4">
                         <a href="/ativ" class="link"> 
-                            <img src="../img/project-management-vector-free-icons-set--31.png" style="width: 50%;" class="my-2">
+                            <img src="../img/project-management-vector-free-icons-set--31.png" style="width: 9vw;" class="my-2">
                             <br>
-                            Criar Objetivos
+                           <span class="legico">Criar Objetivos</span>
                         </a>
                     </div>
                 </div>
 
                 <div class="row text-center">
-                    <div class="col">
-                        <img src="../img/strategy-vector-free-icons-set-14.png" style="width: 50%;" class="my-2">
-                        <br>
-                        VER
-                    </div>
-                    <div class="col">
+                    <div class="col-4">
                         <a href="/ativ" class="link">
-                            <img src="../img/business-vector-free-icon-set-39.png" style="width: 50%;" class="my-2">
+                            <img src="../img/business-vector-free-icon-set-39.png" style="width: 9vw;" class="my-2">
                             <br>
-                            Ver Atividades
+                            <span class="legico">Ver Atividades</span>
                         </a>                
                     </div>
-                    <div class="col">
+                    <div class="col-4">
                         <a href="/ativ" class="link">
-                            <img src="../img/strategy-vector-free-icons-set-21.png" style="width: 50%;" class="my-2">
+                            <img src="../img/strategy-vector-free-icons-set-21.png" style="width: 9vw;" class="my-2">
                             <br>
-                            Ver Iniciativas
+                            <span class="legico">Ver Iniciativas</span>
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col-4">
                         <a href="/ativ" class="link">
-                            <img src="../img/startup-vector-free-icon-set-30.png" style="width: 50%;" class="my-2">
+                            <img src="../img/startup-vector-free-icon-set-30.png" style="width: 9vw;" class="my-2">
                             <br>
-                            Ver Objetivos
+                            <span class="legico">Ver Objetivos</span>
                         </a>
                     </div>
                 </div>
