--- a/styles/main.css
+++ b/styles/main.css
@@ -104,3 +104,16 @@ ul {
 .navico {
     font-size: 1.5em;
 }
+
+.legico {
+    font-size: 2vw;
+}
+
+@media (max-width: 600px) {
+    .legico {
+        font-size: 4vw;
+    }
+    .supico {
+        display: none;
+    }
+}
