--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -20,11 +20,10 @@
         
         <main class="container mt-5">
 
-            <br><br><br><br><br><br>
-
-            <div class="row" id="Ativ">
+            <div class="row mgresp" id="Ativ">
 
             </div>
+
         </main>
         
     </body>
