--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -19,11 +19,9 @@
         <%- include('navPlan'); %>
 
         <main class="container mt-5">
-
-            <br><br><br>
             <section>
             
-                <div class="row" id="Ini">
+                <div class="row mgresp" id="Ini">
 
                 </div>
             
