--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -17,7 +17,7 @@
         </button>
     
         <div class="navbar-text text-white mr-5 ml-5">
-            <span class="h3"><b>Planejamento</b>:<br>Lista de Atividades</span>
+            <span class="h3 navtxt"><b>Planejamento</b>:<br>Lista de Atividades</span>
         </div>
     
         <div class="collapse navbar-collapse order-last" id="navbarSupportedContent">
