--- a/views/objetivos.ejs
+++ b/views/objetivos.ejs
@@ -20,11 +20,9 @@
 
         <main class="container mt-5">
 
-            <br><br><br>
-
             <section>
             
-                <div class="row" id="Obj">
+                <div class="row mgresp" id="Obj">
 
                 </div>
             
