--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -47,6 +47,7 @@
                     <a class="dropdown-item disabled" href="/run/">Corrida</a>
                     <a class="dropdown-item disabled" href="/gym/">Musculação</a>
                     <a class="dropdown-item disabled" href="#!">Sobre</a>
+                    <a class="dropdown-item disabled" href="#!">Histórico de Atualizações do P_BSC</a>
                     <a class="dropdown-item" href="/auth/logout">Sair</a>
                 </div>
             </div>
