Inclusão de script para identificar o título do site.

--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PBSC: Atividades</title>
+        <title>Planejamento: Lista de Atividades</title>
         <%- include('meta'); %>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
@@ -27,6 +27,8 @@
         </main>
         
     </body>
+
+    <script src="../src/titulo.js" type="text/javascript"></script>
 
 </html>
 
