--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PBSC: Iniciativas</title>
+        <title>Planejamento: Lista de Iniciativas</title>
         <%- include('meta'); %>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
@@ -30,6 +30,6 @@
         </main>
         
     </body>
-
+    <script src="../src/titulo.js" type="text/javascript"></script>
 </html>
 
