--- a/views/novaAtividade.ejs
+++ b/views/novaAtividade.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PBSC: Nova Atividade</title>
+        <title>Planejamento: Nova Atividade</title>
         <%- include('meta'); %>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
@@ -92,7 +92,7 @@
         </main>
         
     </body>
-    
+    <script src="../src/titulo.js" type="text/javascript"></script>
     <script src="../src/statusAtividade.js"></script>
     <script src="../src/listaIniciativas.js"></script>
     <script src="../src/dataAtividade.js"></script>    
