--- a/views/novaIniciativa.ejs
+++ b/views/novaIniciativa.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PBSC: Nova Iniciativa</title>
+        <title>Planejamento: Nova Iniciativa</title>
         <%- include('meta'); %>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
@@ -92,7 +92,7 @@
         </main>
         
     </body>
-    
+    <script src="../src/titulo.js" type="text/javascript"></script>
     <script src="../src/statusIniciativa.js"></script>
     <script src="../src/listaObjetivos.js"></script>
     <script src="../src/dataIniciativa.js"></script>
