--- a/views/objetivos.ejs
+++ b/views/objetivos.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PBSC: Objetivos</title>
+        <title>Planejamento: Lista de Objetivos</title>
         <%- include('meta'); %>
 
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -18,11 +18,11 @@
     <body>
         <%- include('navPlan'); %>
 
-        <main class="container mt-5">
+        <main class="container"> 
 
-            <section>
+            <section class="mgresp">
             
-                <div class="row mgresp" id="Obj">
+                <div class="row" id="Obj">
 
                 </div>
             
@@ -31,6 +31,7 @@
         </main>
         
     </body>
+    <script src="../src/titulo.js" type="text/javascript"></script>
 
 </html>
 
